fix icon alignment in link

--- a/stencil-lib/src/components/link/link.scss
+++ b/stencil-lib/src/components/link/link.scss
@@ -4,7 +4,7 @@
 
 .link {
   --text-colour: var(--cpy-text-primary);
-  @apply flex gap-1.5;
+  @apply flex items-center gap-1;
   color: var(--text-colour);
 
   &:hover,
